fix dashboard element alignment

--- a/src/App.css
+++ b/src/App.css
@@ -26,38 +26,12 @@ nav p {
   font-family: "Open Sans";
 }
 
-.search {
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  margin: 25px 0 25px 0;
-}
-
-.search button {
-  color: var(--color-light);
-  background-color: var(--color-purple);
-  border-radius: 5px;
-  padding: 10px;
-  font-weight: bold;
-  border: none;
-}
-
-.search input {
-  color: var(--color-light);
-  background-color: var(--color-dark);
-  border-radius: 5px;
-  border: none;
-  padding-left: 20px;
-}
-
 .content {
-  flex-grow: 1;
-}
-
-.widgets {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  flex-grow: 1;
 }
 
 footer {
